--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
+            <h1>Isaac Hernandez</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -73,9 +73,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I am a full stack web developer who
+enjoys discovering how things work and
+seeing their real-world application.
+Whether it comes to the sciences or
+puzzles, I have a passion for analyzing
+and problem-solving. I hope to bring my
+attention to detail and work ethic to the
+work environment.
+
                     </p>
                 </div>
             </div>
@@ -86,60 +92,55 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="October 2022 – January 2023">
+                <h3>PowerTec</h3>
+                <h4>Warehouse Worker</h4>
+                <ul>
+                    <li>Picking and packing over 130 delivery orders a day from a large catalogue
+                        of inventory</li>
+                    <li>Ensuring the right item is shipped without damage or mislabeling
+                    </li>
+                    <li>Collaborating with 7-8 team members to get deliveries shipped on time
+                        before the deadline</li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
+            <div data-date="July 2017 – January 2022">
+                <h3>Al's Roofing Supply</h3>
                 <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                <ul>
+                    <li>Fulfilled 4-5 larger orders each day, ensuring each order was accurate and
+                        all materials were included
+                        </li>
+                    <li>Performed inventory audits to report on supply needs for the organization
+                        and that inventory was on-hand when needed
+                        </li>
+                </ul>
+            </div>
+            </div>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-        </div>
-    </div>
     <!-- End #experience -->
 
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>California State University East Bay</h3>
+            <span class="education-date">Sept 2016 - Sept 2021</span>
+            <h4>Bachelor of Science in Health Science</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                Pre-Clinical Preparation, Graduated Cum-Laude
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <h3>California State University Powered By Fullstack</h3>
+            <span class="education-date">June 2022 - Dec 2022</span>
+            <h4>Certificate in Web Development</h4>
+            <p>
+                26-week coding bootcamp that focused on HTML, CSS, and JavaScript as well as React, Git, and Node.js.
+            </p>
         </div>
         <!-- End .education-block -->
     </div>
@@ -150,16 +151,21 @@
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
+                    <div class="project-image" background>
+                        <img src="images\Screenshot 2023-05-04 224126.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Parroty</h3>
+                        <ul class="project-description">
+                            <li>A "parody" social media website of Twitter that allows users to post and message each other
+                            </li>
+                            <li>Users could like, parrot, and comment on posts as well as follow each other</li>
+                            <li>The website uses an API that I made with the use of PostgreSQL</li>
+                            <li>Technologies used: JavaScript, Node.js, Express, PostgreSQL, React.js, HTML, CSS
+                            </li>
+                        </ul>
+                        <a href="https://parroty.onrender.com/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -167,15 +173,64 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images\Screenshot 2023-05-04 223731.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Stranger's Things</h3>
+                        <ul class="project-description">
+                            <li>Created a message board that allowed users to post about things for sale</li>
+                            <li>Users could create an account, make posts and comments, and send
+                                messages</li>
+                            <li>The website interacted with an API that stored account information</li>
+                            <li>Technologies used: JavaScript, HTML, CSS, React</li>
+                        </ul>
+                        <a href="https://stately-moxie-3478a7.netlify.app/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images\Screenshot 2023-05-04 230234.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Twice But Nice</h3>
+                        <ul class="project-description">
+                            <li>A fully functional eCommerce website designed to sell secondhand clothing
+                            </li>
+                            <li>Worked remotely with a team of three others and completed the website
+                                before the deadline</li>
+                            <li>Helped develop the backend and implement the administrative features for
+                                the website</li>
+                            <li>Technologies used: JavaScript, Node.js, Express, PostgreSQL, React.js, HTML, CSS
+                            </li>
+                        </ul>
+                        <a href="https://stately-moxie-3478a7.netlify.app/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images\Screenshot 2023-05-04 230301.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Tic-Tac-Toe</h3>
+                        <ul class="project-description">
+                            <li>App using gaming logic to create an online Tic-Tac-Toe game
+                            </li>
+                            <li>Allowed users to input their name, as well as play against a computer or a
+                                friend</li>
+                            <li>Array usage and DOM manipulation was used to allow the user to interact
+                                the board
+                                </li>
+                            <li>Technologies used: JavaScript, HTML, CSS
+                            </li>
+                        </ul>
+                        <a href="https://starlit-cascaron-d8cecf.netlify.app/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -189,31 +244,12 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
             <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Git</li>
+            <li>PostgreSQL</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -235,11 +271,6 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 copyright">
-                    <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
-                    </p>
-                </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -248,22 +279,10 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/mrmister18" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/isaachernandez1" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
