link to resume, changed tictactoe project to game project

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Isaac Hernandez</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="images\IsaacHernandezResume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -214,23 +214,21 @@ work environment.
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\Screenshot 2023-05-04 230301.png" />
+                        <img src="images\Screenshot 2023-05-14 154733.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Tic-Tac-Toe</h3>
+                        <h3>Game Corner</h3>
                         <ul class="project-description">
-                            <li>App using gaming logic to create an online Tic-Tac-Toe game
+                            <li>Created a website that holds a variety and expanding collection of games such as tic-tac-toe and hangman
                             </li>
-                            <li>Allowed users to input their name, as well as play against a computer or a
-                                friend</li>
-                            <li>Array usage and DOM manipulation was used to allow the user to interact
-                                the board
+                            <li>Users can choose from different one-player or two-player games against each other of a computer</li>
+                            <li>A simple and clean design was used for the front-end for a retro look
                                 </li>
-                            <li>Technologies used: JavaScript, HTML, CSS
+                            <li>Technologies used: JavaScript, HTML, CSS, Node.js
                             </li>
                         </ul>
-                        <a href="https://starlit-cascaron-d8cecf.netlify.app/">View Project</a>
+                        <a href="https://game-corner.onrender.com/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -254,17 +252,6 @@ work environment.
     </div>
     <!-- End #skills -->
 
-    <div id="contact">
-        <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-        <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
 
